# aiohttp-socks

./: .coveragerc  .flake8  .gitignore  .travis.yml  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py
.github/workflows/: ci.yml
aiohttp_socks/: __init__.py  _deprecated.py  connector.py  errors.py  helpers.py  proto.py  utils.py
aiohttp_socks/core_socks/: _proto_http.py  _proto_http_async.py  _proto_http_sync.py  _proto_socks4.py  _proto_socks4_async.py  _proto_socks4_sync.py  _proto_socks5.py  _proto_socks5_async.py  _proto_socks5_sync.py  _proxy_async_aio.py  _proxy_async_trio.py  _proxy_sync.py  _stream_async.py  _stream_async_aio.py  _stream_async_trio.py  _stream_sync.py  _version.py
aiohttp_socks/core_socks/async_/asyncio/: __init__.py
aiohttp_socks/core_socks/async_/trio/: __init__.py
aiohttp_socks/core_socks/sync/: __init__.py
aiohttp_socks/proxy/: __init__.py  abc.py  base_proxy.py  chain_proxy.py  enums.py  errors.py  factory.py  helpers.py  http_proxy.py  mixins.py  socks4_proxy.py  socks5_proxy.py
tests/: config.py  conftest.py  http_app.py  http_server.py  mocks.py  proxy_server.py  test_connector.py  test_core_socks_async_aio.py  test_core_socks_async_trio.py  test_core_socks_sync.py  test_misc.py  test_socks.py  utils.py
tests/3proxy/cfg/: 3proxy.cfg  3proxy.cfg.tmpl
tests/cert/: test_host.crt  test_host.key  test_host.pem
tests/tiny_proxy/: __init__.py  helpers.py  proxy_server.py  server.py
tests/tiny_proxy/handlers/: __init__.py  base_proxy.py  http_proxy.py  resolver.py  socks4_proxy.py  socks5_proxy.py
